tests/ui/imports/private-import-nested-suggestion-156060.stderr
error[E0603]: struct import `One` is private
  --> $DIR/private-import-nested-suggestion-156060.rs:13:22
   |
LL |     use crate::two::{One, Two};
   |                      ^^^ private struct import
   |
note: the struct import `One` is defined here...
  --> $DIR/private-import-nested-suggestion-156060.rs:8:9
   |
LL |     use crate::one::One;
   |         ^^^^^^^^^^^^^^^
note: ...and refers to the struct `One` which is defined here
  --> $DIR/private-import-nested-suggestion-156060.rs:4:5
   |
LL |     pub struct One();
   |     ^^^^^^^^^^^^^^^^^ you could import this directly

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0603`.
